# code-sandbox-mcp

./: .gitignore  README.md  pyproject.toml
containers/: Dockerfile.nodejs
dockerfiles/: dockerfile.nodejs  dockerfile.python
examples/: test_client_gemini_call.py  test_gemini.py  test_local.py  test_local_client.py  test_local_client_js.py  test_local_client_python.py  test_remote.py
src/code_sandbox_mcp/: const.py  server.py  tools.py  utils.py
tests/: test_integration.py  test_server.py
