[project]
name = "code-sandbox-mcp"
version = "0.1.0"
description = "A simple code sandbox MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Philipp Schmid", email = "philschmid@google.com" }]
license = { text = "MIT" }
dependencies = [
    "mcp",
    "fastmcp",
    "llm-sandbox[podman]",
]

[project.urls]
Homepage = "https://github.com/philschmid/code-sandbox-mcp"
Repository = "https://github.com/philschmid/code-sandbox-mcp"
"Bug Tracker" = "https://github.com/philschmid/code-sandbox-mcp/issues"

[project.optional-dependencies]
docker = ["docker>=7.1.0"]
k8s = ["kubernetes>=32.0.1"]
podman = ["docker>=7.1.0", "podman>=5.4.0.1"]
dev = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "pytest-asyncio",
    "pytest-mock",
]

[project.scripts]
code-sandbox-mcp = "code_sandbox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_sandbox_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]